turtlebot4_ws/log/build_2025-05-05_12-36-13/maze_pkg/stderr.log
  File "/home/ashley.akamine/rampagingRoombas/turtlebot4_ws/install/maze_pkg/lib/python3.10/site-packages/maze_pkg/goal_pub.py", line 21
    data.goal_x = 1, data.goal_y = 1
    ^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

